test/compile_errors/err_derive_eq_field_without_eq.w
//! expect-error: cannot derive Eq for type 'UsesNoEq': field 'value' of type 'NoEq' does not implement Eq

type NoEq { value: i32 }

@[derive(Eq)]
type UsesNoEq { value: NoEq }

fn main:
    let _ = UsesNoEq { value: NoEq { value: 1 } }
